Feat: KonsiController inseridindo o enfileiramento do cpf

--- a/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf.csproj
+++ b/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Konsi.API.ExternalServices\Konsi.API.ExternalServices.csproj" />
+    <ProjectReference Include="..\..\Konsi.Domain\Konsi.Domain.csproj" />
+    <ProjectReference Include="..\..\Konsi.Infrastructure\Konsi.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
