--- a/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
+++ b/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
@@ -7,10 +7,16 @@
     }
   },
   "AllowedHosts": "*",
-"Konsi": {
-  "ApiUrl": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/token",
-  "name": "test@konsi.com.br",
-  "Password": "Test@Konsi2023*",
-  "ApiUrlCpf": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/inss/consulta-beneficios/"
-}
+  "Konsi": {
+    "ApiUrl": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/token",
+    "name": "test@konsi.com.br",
+    "Password": "Test@Konsi2023*",
+    "ApiUrlCpf": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/inss/consulta-beneficios/"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest",
+    "QueueName": "cpf_queue"
+  }
 }
