FEAT: Implementação Redis

--- a/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
+++ b/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
@@ -18,5 +18,8 @@
     "UserName": "guest",
     "Password": "guest",
     "QueueName": "cpf_queue"
+  },
+  "Redis": {
+    "ConnectionString": "localhost"
   }
 }
