--- a/src/Konsi.Infrastructure/Konsi.Infrastructure.csproj
+++ b/src/Konsi.Infrastructure/Konsi.Infrastructure.csproj
@@ -7,12 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <Compile Remove="Messaging\RabbitMQ\RabbitMQConsumerService.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Konsi.API.ExternalServices\Konsi.API.ExternalServices.csproj" />
     <ProjectReference Include="..\Konsi.Domain\Konsi.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Redis\Data\" />
   </ItemGroup>
 
 </Project>
