--- a/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/docker-compose.yml
+++ b/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/docker-compose.yml
@@ -14,4 +14,14 @@ services:
     image: redis
     ports:
       - "6379:6379" # Porta Redis
-
+    
+  elasticsearchKonsi:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.2
+    container_name: elasticsearchKonsi
+    environment:
+     - xpack.security.enabled=false
+     - xpack.security.http.ssl.enabled=false
+     - discovery.type=single-node
+    ports:
+      - "9200:9200"  #HTTP do Elasticsearch
+      - "9300:9300"  
