--- a/src/Konsi.Infrastructure/Konsi.Infrastructure.csproj
+++ b/src/Konsi.Infrastructure/Konsi.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,12 +12,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+    <PackageReference Include="NEST" Version="7.17.5" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.10" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Konsi.API.ExternalServices\Konsi.API.ExternalServices.csproj" />
     <ProjectReference Include="..\Konsi.Domain\Konsi.Domain.csproj" />
   </ItemGroup>
 
