feat: parameterize credentials

--- a/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
+++ b/src/Konsi.API.ConsultarCpf/Konsi.API.ConsultarCpf/appsettings.json
@@ -8,16 +8,16 @@
   },
   "AllowedHosts": "*",
   "Konsi": {
-    "ApiUrl": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/token",
-    "name": "test@konsi.com.br",
-    "Password": "Test@Konsi2023*",
-    "ApiUrlCpf": "http://teste-dev-api-dev-140616584.us-east-1.elb.amazonaws.com/api/v1/inss/consulta-beneficios/"
+    "ApiUrl": "KONSI_API_URL",
+    "name": "KONSI_USERNAME",
+    "Password": "KONSI_PASSWORD",
+    "ApiUrlCpf": "KONSI_API_URL_CPF"
   },
   "RabbitMQ": {
-    "HostName": "localhost",
-    "UserName": "guest",
-    "Password": "guest",
-    "QueueName": "cpf_queue"
+    "HostName": "RABBITMQ_HOST",
+    "UserName": "RABBITMQ_USER",
+    "Password": "RABBITMQ_PASSWORD",
+    "QueueName": "RABBITMQ_QUEUE"
   },
   "Redis": {
     "ConnectionString": "localhost"
